# NetBricks-GEM5

./: Cargo.toml  README.md  build_gem5.sh  build_musl.sh  build_musl_inside.sh  build_static_binary.sh  build_static_binary_inside.sh  cargo_config  config.sh  limitmem  main.rs  mem_prof.py  run_gem5.sh  run_musl.sh  run_static_binary.sh  tlb_ana.py
dpdkIO/src/: main.rs
examples/: config.sh
examples/acl-fw-ipsec/: Cargo.toml
examples/acl-fw-ipsec-sha/: Cargo.toml
examples/acl-fw-ipsec-sha/src/: main.rs
examples/acl-fw-ipsec/src/: main.rs
examples/acl-fw/src/: main.rs
examples/dpi/: Cargo.toml  trace.txt  trace_0.txt  trace_1.txt  trace_10.txt  trace_11.txt  trace_12.txt  trace_13.txt  trace_14.txt  trace_15.txt  trace_16.txt  trace_17.txt  trace_18.txt  trace_19.txt  trace_2.txt  trace_20.txt  trace_21.txt  trace_22.txt  trace_23.txt  trace_24.txt  trace_25.txt  trace_26.txt  trace_27.txt  trace_28.txt  trace_29.txt  trace_3.txt  trace_30.txt  trace_31.txt  trace_4.txt  trace_5.txt  trace_6.txt  trace_7.txt  trace_8.txt  trace_9.txt
examples/dpi-ipsec/: Cargo.toml
examples/dpi-ipsec-sha/: Cargo.toml
examples/dpi-ipsec-sha/src/: dpi.rs  main.rs
examples/dpi-ipsec/src/: dpi.rs  main.rs
examples/dpi-master/: Cargo.toml
examples/dpi-master/src/: main.rs
examples/dpi-normal/: Cargo.toml
examples/dpi-normal/src/: dpi.rs  main.rs
examples/dpi-queue/: Cargo.toml
examples/dpi-queue/rules/: dpihsrules.rs
examples/dpi-queue/src/: main.rs
examples/dpi/rules/: dpirules.rs  hs.rules  regex.rules  sentense.rules  word.rules
examples/dpi/src/: main.rs  main_back.rs
examples/dumptrace/: Cargo.toml
examples/dumptrace/trace/: trace_0.txt  trace_1.txt  trace_10.txt  trace_11.txt  trace_12.txt  trace_13.txt  trace_14.txt  trace_15.txt  trace_16.txt  trace_17.txt  trace_18.txt  trace_19.txt  trace_2.txt  trace_20.txt  trace_21.txt  trace_22.txt  trace_23.txt  trace_24.txt  trace_25.txt  trace_26.txt  trace_27.txt  trace_28.txt  trace_29.txt  trace_3.txt  trace_30.txt  trace_31.txt  trace_4.txt  trace_5.txt  trace_6.txt  trace_7.txt  trace_8.txt  trace_9.txt
examples/helloworld/: Cargo.toml
examples/hyperscan/: Cargo.toml
examples/hyperscan/src/: main.rs
examples/lpm/: Cargo.toml
examples/lpm-ipsec/: Cargo.toml
examples/lpm-ipsec-sha/: Cargo.toml
examples/lpm-ipsec-sha/src/: lpm.rs  main.rs
examples/lpm-ipsec/src/: lpm.rs  main.rs
examples/lpm/src/: lpm.rs  main.rs
examples/macswap/: Cargo.toml
examples/macswap-ipsec/: Cargo.toml
examples/macswap-ipsec-sha/: Cargo.toml
examples/macswap-ipsec-sha/src/: main.rs
examples/macswap-ipsec/src/: main.rs
examples/macswap/src/: main.rs
examples/maglev/: Cargo.toml
examples/maglev-ipsec/: Cargo.toml
examples/maglev-ipsec-sha/: Cargo.toml
examples/maglev-ipsec-sha/src/: main.rs
examples/maglev-ipsec/src/: main.rs
examples/maglev/src/: main.rs
examples/memory-profiling/cgroup-log/: memusage.txt_2019-08-26T18:26:34.013599
examples/monitoring/: Cargo.toml
examples/monitoring-ipsec/: Cargo.toml
examples/monitoring-ipsec-sha/: Cargo.toml
examples/monitoring-ipsec-sha/src/: main.rs
examples/monitoring-ipsec/src/: main.rs
examples/monitoring/src/: main.rs
examples/nat-tcp-v4-ipsec/: Cargo.toml
examples/nat-tcp-v4-ipsec-sha/: Cargo.toml
examples/nat-tcp-v4-ipsec-sha/src/: main.rs
examples/nat-tcp-v4-ipsec/src/: main.rs
examples/nat-tcp-v4/src/: main.rs
examples/spmc/: Cargo.toml
examples/spmc/src/: main.rs  main_back.rs
examples/tcp-reconstruction/: Cargo.toml
framework/: Cargo.toml
framework-inside/: Cargo.toml
framework-inside-ipsec/: Cargo.toml
framework-inside-ipsec/src/: lib.rs
framework-inside-ipsec/src/heap_ring/: ring_buffer.rs
framework-inside-ipsec/src/native/: mbuf.rs
framework-inside-ipsec/src/packets/: ethernet.rs  tcp.rs
framework-inside-ipsec/src/scheduler/: mod.rs  (+1 more)
framework-inside/src/: lib.rs
framework-inside/src/heap_ring/: ring_buffer.rs
framework-inside/src/interface/port/: sim_port.rs
framework-inside/src/native/: mbuf.rs
framework-inside/src/operators/: receive_batch.rs  sendall_batch.rs
framework-inside/src/packets/: buffer.rs  ethernet.rs
framework-inside/src/scheduler/: mod.rs  standalone_scheduler.rs
framework-inside/src/utils/: mod.rs
framework/src/: lib.rs
sgx-runner/: Cargo.toml
sgx-runner/src/: main.rs
spmc-0.3.0/src/: channel.rs  lib.rs
zipfgen/: Cargo.toml
zipfgen/src/: lib.rs  zipfgen.rs
(+9 files in other folders)
