[workspace]
members = [
    "framework",
    #
    "examples/macswap",
   	"examples/acl-fw",
   	"examples/lpm",
   	"examples/maglev",
   	"examples/dpi",
   	"examples/nat-tcp-v4",
   	"examples/monitoring",
    # 
    "examples/macswap-ipsec",
    "examples/acl-fw-ipsec",
    "examples/lpm-ipsec",
    "examples/maglev-ipsec",
    "examples/dpi-ipsec",
    "examples/nat-tcp-v4-ipsec",
    "examples/monitoring-ipsec",
    # 
    "examples/spmc",
    "examples/hyperscan",
]
exclude = ["rust-sgx", "mbedtls-0.3.0"]

[profile.release]
opt-level = 3
lto = true
rpath = true
debug = true
debug-assertions = false
