[package]
name = "netbricks"
version = "0.3.0"
authors = ["William of Ockham <Occam_Engineering@comcast.com>", "Aurojit Panda <apanda@cs.berkeley.edu>"]
description = "A network function framework written in Rust and using DPDK"
license = "ISC"
repository = "https://github.com/williamofockham/NetBricks"
readme = "README.md"
keywords = ["netbricks", "network-functions", "nfs", "packet-processing"]
categories = ["network-functions", "framework"]

[lib]
doctest = false

[dependencies]
config = "0.9"
crossbeam = "0.6"
failure = "0.1"
fallible-iterator = "0.2"
fnv = ">= 1.0"
hex = "0.3"
lazy_static = ">= 1.3"
libc = ">= 0.2"
log = { version = "0.4", features = ["std", "serde"] }
regex = ">= 1.1"
serde = ">= 1.0"
serde_derive = ">= 1.0"
twox-hash = ">= 1.2"
fxhash = "0.2.1"
time = { version = "0.1.42" }
zipfgen = { version = "0.1.0", path = "../zipfgen" }
openssl-sys = "0.9"
openssl = { version = "0.10", path = "../openssl-0.10.24"}

# enclave can only use mbedtls for crypto.
# mbedtls = {version="0.3.0", default-features = false, features = ["sgx"]}
# mbedtls = {version="0.3.0", path="../mbedtls-0.3.0/", default-features = false, features = ["sgx"]}

[features]
default = []
uniform = []
ipsec = []

[dev-dependencies]
proptest = "0.8.3"

[profile.dev]
opt-level = 0  # Controls the --opt-level the compiler builds with
debug = true   # Controls whether the compiler passes `-g`

# The release profile, used for `cargo build --release`
[profile.release]
opt-level = 3
debug = false

