[package]
name = "dumptrace"
version = "0.1.0"
authors = ["William of Ockham <Occam_Engineering@comcast.com>"]
description = "Example: mac swap"
license = "..."
repository = "https://github.com/williamofockham/NetBricks/tree/master/examples/macswap"
readme = "..."
keywords = ["netbricks", "network-functions", "nfs", "packet-processing"]
categories = ["network-functions", "framework"]

[dependencies]
netbricks = { path = "../../framework", features = ["dumptrace"]}
lazy_static = ">= 1.3"

[features]
default = []
print = []

[profile.dev]
opt-level = 0  # Controls the --opt-level the compiler builds with
debug = true   # Controls whether the compiler passes `-g`

# The release profile, used for `cargo build --release`
[profile.release]
opt-level = 3
debug = false